modules/transit-opentest/ec2.tf

resource "aws_instance" "vpn" {
    ami                             = "${data.aws_ami.amazon-linux-2.id}"
    instance_type                   = "t2.micro"
    source_dest_check               = false
    vpc_security_group_ids          = [
      "${aws_security_group.vpn-sg.id}"
    ]
    subnet_id                       = aws_subnet.private-subnets[0].id
    key_name                        = aws_key_pair.vpn-key.key_name

    user_data            = "${data.template_file.userdata.rendered}"
    iam_instance_profile = "${aws_iam_instance_profile.vpn-profile.name}"

    tags = {
        Name = "${var.component_name}-vpn-gateway"
    }
}

data "template_file" "userdata" {
  template = "${file("${path.module}/templates/userdata.tpl")}"

  vars = {
    OPENTEST_ASSETS_BUCKET = local.opentest-assets-bucket
  }
}
