modules/transit-opentest/subnet.tf
resource "aws_subnet" "public-subnets" {
  count = "${length(var.public_subnets)}"

  vpc_id                  = "${aws_vpc.main-vpc.id}"
  cidr_block              = element(concat(var.public_subnets, [""]), count.index)
  availability_zone       = element(var.azs, count.index)
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.component_name}-public-az${count.index}"
  }
}

resource "aws_subnet" "private-subnets" {
  count = "${length(var.public_subnets)}"

  vpc_id                  = "${aws_vpc.main-vpc.id}"
  cidr_block              = element(concat(var.private_subnets, [""]), count.index)
  availability_zone       = element(var.azs, count.index)

  tags = {
    Name = "${var.component_name}-private-az${count.index}"
  }
}

resource "aws_ssm_parameter" "public-subnet-id" {
  name        = "/NHS/${var.environment}-${data.aws_caller_identity.current.account_id}/${var.component_name}-vpc/public-subnet-0-id"
  description = "ID of the public subnet #0 in ${var.component_name}-vpc"
  type        = "String"
  value       = aws_subnet.public-subnets[0].id

  tags = {
    Environment = "${var.environment}"
  }
}

resource "aws_ssm_parameter" "private-subnet-id" {
  name        = "/NHS/${var.environment}-${data.aws_caller_identity.current.account_id}/${var.component_name}-vpc/private-subnet-0-id"
  description = "ID of the private subnet #0 in ${var.component_name}-vpc"
  type        = "String"
  value       = aws_subnet.private-subnets[0].id

  tags = {
    Environment = "${var.environment}"
  }
}
